target-servers/security_groups.tf
resource "aws_security_group" "application_sg" {
  name        = "application-sg"
  description = "SG with internet access"
  vpc_id      = aws_vpc.migrated_resources_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Access to internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Access to internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

    tags = {
    Name    = "application-sg"
    Project = "Quokka-migration"
    Stage = "migrated-resources"
  }
}

resource "aws_security_group" "data_centre_sg" {
  name        = "data-centre-sg"
  description = "SG with internet access"
  vpc_id      = aws_vpc.migrated_resources_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Access of WebApp server"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name    = "data-centre-sg"
    Project = "Quokka-migration"
    Stage = "migrated-resources"
  }
}
